fix: edit chrome scrollbar

--- a/.vitepress/theme/styles/style.css
+++ b/.vitepress/theme/styles/style.css
@@ -10,6 +10,27 @@
   --vp-c-brand-dark: #039adb;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #f1f1f1;
+}
+
 a {
   text-decoration: none !important;
 }
